fix: some layout issues

--- a/docs/_sass/minima.scss
+++ b/docs/_sass/minima.scss
@@ -191,3 +191,8 @@ pre, code {
 .post-list h3 {
   margin-top: 0;
 }
+
+.table-container {
+  overflow-x: auto;
+  margin-bottom: 1rem;
+}
